--- a/TestDelegates/Base.lproj/Main.storyboard
+++ b/TestDelegates/Base.lproj/Main.storyboard
@@ -1,24 +1,123 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="AvenirNext.ttc">
+            <string>AvenirNext-DemiBold</string>
+            <string>AvenirNext-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gqo-xa-OWQ">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="pDq-UI-Ufb"/>
+                                </constraints>
+                                <items>
+                                    <navigationItem title="RecievingVC" id="YOW-HZ-nm9">
+                                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="ckS-OY-Rpk">
+                                            <connections>
+                                                <segue destination="B3B-wS-uMo" kind="show" id="hix-3P-E7m"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Tap the plus to add" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="12" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VQJ-gW-Yzl">
+                                <rect key="frame" x="16" y="73" width="343" height="574"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="37"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="gqo-xa-OWQ" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="0ti-6B-bGe"/>
+                            <constraint firstItem="gqo-xa-OWQ" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="M5h-VK-NOf"/>
+                            <constraint firstItem="gqo-xa-OWQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="U9L-Xa-VfT"/>
+                            <constraint firstItem="gqo-xa-OWQ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Ztk-sc-l4p"/>
+                            <constraint firstItem="gqo-xa-OWQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="qZT-aT-TAa"/>
+                            <constraint firstItem="gqo-xa-OWQ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="xpQ-3P-lcD"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="recievingLabel" destination="VQJ-gW-Yzl" id="qS6-JR-fU9"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="32.799999999999997" y="33.733133433283363"/>
+        </scene>
+        <!--Sender View Controller-->
+        <scene sceneID="tXg-uS-J4I">
+            <objects>
+                <viewController id="B3B-wS-uMo" customClass="SenderViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="7JI-Dd-DhT">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oMK-QB-7Fb">
+                                <rect key="frame" x="0.0" y="160" width="375" height="60"/>
+                                <color key="backgroundColor" red="0.49601041870000001" green="0.84206495260000003" blue="0.86459963350000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="Vhr-bL-G27"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="24"/>
+                                <state key="normal" title="SEND">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="sendButtonPressed:" destination="B3B-wS-uMo" eventType="touchUpInside" id="13G-TY-qmO"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Tap to enter text 👇" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kRm-Zt-1Xi">
+                                <rect key="frame" x="0.0" y="70" width="375" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="lKI-e3-gvC"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="oMK-QB-7Fb" firstAttribute="leading" secondItem="yA9-s8-7RO" secondAttribute="leading" id="26Z-CB-my6"/>
+                            <constraint firstItem="oMK-QB-7Fb" firstAttribute="leading" secondItem="yA9-s8-7RO" secondAttribute="leading" id="7xY-Zs-CXV"/>
+                            <constraint firstItem="oMK-QB-7Fb" firstAttribute="trailing" secondItem="yA9-s8-7RO" secondAttribute="trailing" id="8o9-Zr-n0i"/>
+                            <constraint firstItem="oMK-QB-7Fb" firstAttribute="trailing" secondItem="yA9-s8-7RO" secondAttribute="trailing" id="C0z-Fg-s2I"/>
+                            <constraint firstItem="kRm-Zt-1Xi" firstAttribute="top" secondItem="yA9-s8-7RO" secondAttribute="top" constant="50" id="IXU-mZ-szY"/>
+                            <constraint firstItem="kRm-Zt-1Xi" firstAttribute="trailing" secondItem="yA9-s8-7RO" secondAttribute="trailing" id="fwD-aw-UnG"/>
+                            <constraint firstItem="oMK-QB-7Fb" firstAttribute="top" secondItem="kRm-Zt-1Xi" secondAttribute="bottom" constant="30" id="wWJ-4k-Bdl"/>
+                            <constraint firstItem="kRm-Zt-1Xi" firstAttribute="leading" secondItem="yA9-s8-7RO" secondAttribute="leading" id="zb3-B7-mib"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="yA9-s8-7RO"/>
+                    </view>
+                    <connections>
+                        <outlet property="dataEntryTextField" destination="kRm-Zt-1Xi" id="579-1f-Wb5"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lw0-oB-12a" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="824.79999999999995" y="33.733133433283363"/>
         </scene>
     </scenes>
 </document>
